--- a/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Index.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Index.cshtml
@@ -172,13 +172,13 @@
                         <div class="form-group">
                             <label class="control-label col-md-3">Group</label>
                             <div class="col-md-9">
-                                <select class="form-control" id="group-select" data-role="ddl-group"></select>
+                                <select class="form-control" id="group-select" data-role="ddl-group-reassign"></select>
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="control-label col-md-3">Technician</label>
                             <div class="col-md-9">
-                                <select class="form-control" id="technician-select" data-role="ddl-technician"></select>
+                                <select class="form-control" id="technician-select" data-role="ddl-technician-reassign"></select>
                             </div>
                         </div>
                         <div>
