--- a/TMS/TMS/Content/custom-css/tms.css
+++ b/TMS/TMS/Content/custom-css/tms.css
@@ -56,6 +56,7 @@
 
     #notification-list li a {
         white-space: pre-wrap !important;
+        border-bottom: solid 1px #c5dae6;
         height: 105px !important;
     }
 
