--- a/TMS/TMS/Areas/HelpDesk/Views/BusinessRule/New.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/BusinessRule/New.cshtml
@@ -268,8 +268,8 @@
                         <h4 class="general-form-sec-heading">NOTIFICATION</h4>
                     </div>
                     <div class="row bottom-space left-space" style="padding-left: 30px;">
-                        <label>Email the following technicians: </label>
-                        <select id="ddl-technician" multiple="multiple" name="technicianId" data-role="ddl-technician"></select>
+                        <label>Email the following helpdesks: </label>
+                        <select id="ddl-helpdesk" multiple="multiple" name="helpdeskId" data-role="ddl-helpdesk"></select>
                     </div>
                     <br />
                     <div class="row alignCenter">
