--- a/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/EditTicket.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/EditTicket.cshtml
@@ -715,7 +715,7 @@
                 $("#keywords").tagit({
                     allowSpaces: true,
                     autocomplete: {
-                        source: "/Ticket/GetKeywords",
+                        source: "/Ticket/GetKeywords"
                     }
                 });
         });
