--- a/TMS/TMS/Areas/HelpDesk/Views/BusinessRule/Edit.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/BusinessRule/Edit.cshtml
@@ -266,8 +266,8 @@
                         <h4 class="general-form-sec-heading">NOTIFICATION</h4>
                     </div>
                     <div class="row bottom-space left-space" style="padding-left: 30px;">
-                        <label>Email the following technicians: </label>
-                        <select id="ddl-technician" multiple="multiple" name="technicianId" data-role="ddl-technician"></select>
+                        <label>Email the following helpdesks: </label>
+                        <select id="ddl-helpdesk" multiple="multiple" name="helpdeskId" data-role="ddl-helpdesk"></select>
                     </div>
                     <br />
                     <div class="row alignCenter">
@@ -325,10 +325,10 @@
                 }
                 tree.jstree().set_text(nodeId, anchorTag.innerHTML);
             }
-            @foreach (var item in Model.technicianList)
+            @foreach (var item in Model.helpdeskList)
             {
                 <text>
-            initDropdown($("#ddl-technician"), '@item.Name', '@item.Id');
+            initDropdown($("#ddl-helpdesk"), '@item.Name', '@item.Id');
             </text>
             }
         }
