--- a/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Index.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Index.cshtml
@@ -567,9 +567,9 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="filter_time_period hidden" data-role="filter_time_period">
-                                <h5>Time period</h5>
-                                <input type="text" readonly="readonly" data-role="filter_time_period_input" />
+                            <div class="form-group filter_time_period hidden" data-role="filter_time_period">
+                                <label>Time period</label>
+                                <input class="form-control" type="text" readonly="readonly" data-role="filter_time_period_input" />
                             </div>
                             <div class="form-group filter_status" data-role="filter_status">
                                 <label>Status: &nbsp;</label>
