--- a/TMS/TMS/Views/Shared/TMSLayout.cshtml
+++ b/TMS/TMS/Views/Shared/TMSLayout.cshtml
@@ -10,7 +10,7 @@
     <title>TMS</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-    @Styles.Render("~/Content/css")
+    @Styles.Render("~/Content/appcss")
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body class="hold-transition skin-blue sidebar-mini">
