--- a/TMS/TMS/Views/FAQ/Index.cshtml
+++ b/TMS/TMS/Views/FAQ/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IQueryable<KnowledgeBaseViewModel>
+﻿@model IEnumerable<KnowledgeBaseViewModel>
 @{
     Layout = "~/Views/Shared/KBLayout.cshtml";
     var relatedSolution = ViewBag.relatedSolution;
