--- a/TMS/TMS/Views/KnowledgeBase/Create.cshtml
+++ b/TMS/TMS/Views/KnowledgeBase/Create.cshtml
@@ -133,7 +133,7 @@
 
         var generateTags = function () {
             $.ajax({
-                url: "/HelpDesk/ManageTicket/GetTags",
+                url: "/Ticket/GetTags",
                 type: "GET",
                 dataType: "json",
                 data: {
