--- a/TMS/TMS/Views/Ticket/TicketDetail.cshtml
+++ b/TMS/TMS/Views/Ticket/TicketDetail.cshtml
@@ -96,7 +96,7 @@
                         <div class="col-sm-10">
                             @if (!string.IsNullOrWhiteSpace(Model.Solution))
                             {
-                                <span class="pre-wrap">@Html.DisplayFor(m => m.Solution)</span>
+                                <span class="pre-wrap">@Html.Raw(Model.Solution)</span>
                             }
                             else
                             {
