--- a/TMS/TMS/Views/Ticket/Solve.cshtml
+++ b/TMS/TMS/Views/Ticket/Solve.cshtml
@@ -33,7 +33,7 @@
 
         .editable img {
             max-width: 100%;
-            N max-height: 100%;
+            max-height: 100%;
         }
 
     .solution-subject {
