add Type to bussiness rule, change search by subject || code

--- a/TMS/TMS/Views/Ticket/Index.cshtml
+++ b/TMS/TMS/Views/Ticket/Index.cshtml
@@ -109,7 +109,7 @@
                     </select>
                 </div>
                 <div class="col-sm-3 input-group">
-                    <input type="text" id="search-txt" class="form-control" placeholder="Search by subject...">
+                    <input type="text" id="search-txt" class="form-control" placeholder="Search by subject, code">
                     <span class="input-group-btn">
                         <button name="search" id="search-btn" class="btn btn-default btn-flat">
                             <i class="fa fa-search"></i>
