--- a/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Index.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Index.cshtml
@@ -608,7 +608,7 @@
                         <div class="col-sm-6">
                             <div class="form-group">
                                 <label>Search: &nbsp;</label>
-                                <input class="form-control" type="text" id="search-txt" placeholder="Subject" />
+                                <input class="form-control" type="text" id="search-txt" placeholder="Search by subject, code" />
                             </div>
                             <div class="form-group filter_mode" data-role="filter_mode">
                                 <label>Mode</label>
