--- a/TMS/TMS/Areas/Technician/Views/ManageTicket/Index.cshtml
+++ b/TMS/TMS/Areas/Technician/Views/ManageTicket/Index.cshtml
@@ -152,7 +152,7 @@
                     </div>
                     <div class="form-group">
                         <label>Search: &nbsp;</label>
-                        <input class="form-control" type="text" id="search-txt" />
+                        <input class="form-control" type="text" id="search-txt" placeholder="Search by subject, code"/>
                     </div>
 
                 </div>
